loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:5: error: illegal start of simple pattern
                       case if <3 => droite()
                            ^Poucet1:6: error: '=>' expected but ';' found.
                       case _ => gauche()
^