loopdowhile.Poucet1.scala.code
var biscuit = 0
do { for (i<-0 to 5) {avance();
                      if (estSurBiscuit()) {biscuit = biscuit +1};
                     biscuit match{
                       case if <3 => droite()
                       case _ => gauche()
                     }}}
while (sortieTrouvee)